Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34346

Camera cannot be started again after stopped on Android

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.2.0
    • 5.2.0 Beta1
    • Multimedia
    • None
    • Asus FonPad (x86) and Nexus7 (arm)
    • Android
    • 30cf028fb158f08bc01357476f73426c43c35b4e

    Description

      After calling Camera.stop(), calling Camera.start() does not start it again.

      I'm using the camera like this:

      VideoOutput {
          source: camera
          anchors.fill: parent
      
          Camera {
              id: camera
              captureMode: Camera.CaptureViewfinder
          }
      }
      

      I do not get any errors from the Camera element. Also the state transitions of the Camera element seem to be ok.

      During startup: Loading, Loaded, Starting, Active
      After stop(): Stopping, Loaded
      After start(): Starting, Active

      Here is the output of logcat. You can see where I called Camera.stop() and Camera.start().

      D/Camera_HAL(  136): ATOM_GetCameraInfo
      D/Camera_HAL(  136): ATOM_GetCameraInfo
      I/CameraService(  136): Opening camera 0
      D/Camera_HAL(  136): ATOM_OpenCameraHardware
      D/Camera_ISP(  136): Kernel with multiplexed preview and main devices detected
      W/Camera_ISP(  136): Open device 0 with fd 34
      E/Camera_Conf(  136): ERROR in opening CPF file: No such file or directory
      I/Camera_ControlThread(  136): camera_opened set to default : 1
      I/Camera_ControlThread(  136): Set current  camera_Id: 0
      E/Camera_ISP(  136): @atomisp_set_attribute
      E/Camera_ISP(  136): setting attribute [Colour Effect] to 0
      I/Camera_ControlThread(  136): DEPRECATED: Got new preview frame rate: 30
      E/Camera_ISP(  136): @atomisp_set_attribute
      E/Camera_ISP(  136): setting attribute [White Balance] to 0
      D/Camera_ControlThread(  136): Changed ae metering mode to "auto" (0)
      E/Camera_ISP(  136): @atomisp_set_attribute
      E/Camera_ISP(  136): setting attribute [Exposure Compensation] to 0
      D/Camera_HAL(  136): atom_set_callbacks
      D/Camera_HAL(  136): atom_enable_msg_type msg_type=0x0000ffff
      D/Camera_HAL(  136): atom_disable_msg_type msg_type=0x000003f2
      I/AwesomePlayer(  136): setDataSource_l(URL suppressed)
      W/MediaPlayer(  136): info/warning (1, 1147916112)
      I/cip_VorbisDec(  136): UMC Decoder plugin created, Media Codecs version: 1.0.2098
      I/AwesomePlayer(  136): setDataSource_l(URL suppressed)
      W/MediaPlayer(  136): info/warning (1, 1147912944)
      I/cip_VorbisDec(  136): UMC Decoder plugin created, Media Codecs version: 1.0.2098
      I/AudioPolicyManagerBase(  136): APM: getOutput
      I/AudioPolicyManagerBase(  136): APM: getOutput
      I/AudioPolicyManagerBase(  136): APM: getOutput
      D/Camera_HAL(  136): ATOM_GetCameraInfo
      D/Camera_HAL(  136): atom_get_parameters
      D/Camera_HAL(  136): atom_put_parameters
      D/Camera_HAL(  136): atom_set_parameters
      D/Camera_HAL(  136): atom_set_parameters
      D/Camera_HAL(  136): atom_set_parameters
      D/Camera_HAL(  136): atom_preview_enabled
      D/Camera_HAL(  136): atom_set_preview_window
      D/Camera_HAL(  136): atom_start_preview
      I/Camera_ControlThread(  136): Preview window not set deferring start preview until then
      D/Camera_HAL(  136): atom_preview_enabled
      D/Camera_HAL(  136): atom_set_preview_window
      E/Camera_ISP(  136): @atomisp_set_attribute
      E/Camera_ISP(  136): setting attribute [zoom] to 0
      E/Camera_ISP(  136): @startDevice +++
      E/Camera_ISP(  136): device = 0
      E/Camera_ISP(  136):  startDevice fd = 34
      E/Camera_ISP(  136): @startDevice ---
      E/Camera_ISP(  136): @getPreviewFrame--
      I/Camera_ControlThread(  136): camera_opened set to 1 : 1
      D/pvr_drv_video(  136): hw_get_module returned
      D/Qt      (31837): assets:/qml/myapp/MediaPlayer.qml:162 (onClicked): ################ camera.stop() ##################
      D/Camera_HAL(  136): atom_disable_msg_type msg_type=0x00000010
      D/Camera_HAL(  136): atom_stop_preview
      I/Camera_ControlThread(  136): camera_opened set to 0 : 0
      D/Qt      (31837): assets:/qml/myapp/MediaPlayer.qml:166 (onClicked): ################ camera.start() ##################
      D/Camera_HAL(  136): atom_preview_enabled
      D/Camera_HAL(  136): atom_set_preview_window
      D/Camera_HAL(  136): atom_start_preview
      E/Camera_ISP(  136): @atomisp_set_attribute
      E/Camera_ISP(  136): setting attribute [zoom] to 0
      E/Camera_ISP(  136): @startDevice +++
      E/Camera_ISP(  136): device = 0
      E/Camera_ISP(  136):  startDevice fd = 34
      E/Camera_ISP(  136): @startDevice ---
      E/Camera_ISP(  136): @getPreviewFrame--
      I/Camera_ControlThread(  136): camera_opened set to 1 : 1
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            conny Cornelius Hald
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes